--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>@hcflgov/vue-html-wrapper</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#spy-target" data-offset="70">
     <noscript>
       <strong>We're sorry but @hcflgov/vue-html-wrapper doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+
     <div id="hc-main" class="d-flex flex-column"></div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
